# ExampleCMakeProjects

./: .gitignore  .gitmodules  README.md
Bar/: CMakeLists.txt
Bar/dependencies/: Foo
Bar/scripts/: build_and_run.sh  install_dependencies.sh
Bar/source/applications/bar/: CMakeLists.txt  bar.cpp
Foo/: CMakeLists.txt  FooConfig.cmake
Foo/scripts/: install_dependencies.sh
Foo/source/libraries/foo/: CMakeLists.txt  foo.cpp  foo.hpp
Foo/templates/: FooConfig.in.cmake
